[gd_scene load_steps=2 format=3 uid="uid://cqai1jwqdvcg6"]

[ext_resource type="Script" path="res://src/hazard.gd" id="1_531wo"]

[node name="hazard" type="Area2D"]
script = ExtResource("1_531wo")

[node name="safeTime" type="Timer" parent="."]

[node name="collision" type="CollisionPolygon2D" parent="."]
position = Vector2(0, -88)
scale = Vector2(1.2, 1.2)
polygon = PackedVector2Array(2, 179, -333, -191, -266, -280, -197, -339, -101, -378, -1, -385, 103, -369, 195, -332, 271, -277, 331, -199)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="safeTime" to="." method="_on_safe_time_timeout"]
